store-app/k8s/store-app-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store-app-frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      component: store-app-frontend
  template:
    metadata:
      labels:
        component: store-app-frontend
    spec:
      containers:
        - name: store-app-frontend
          image: andyrew91/store-app-frontend:1.0.2
          ports:
            - containerPort: 3000
