store-app/k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: products-api-backend
spec:
  selector:
    component: products-api-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
