store-app/k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: products-db
spec:
  selector:
    component: database
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
