store-app/k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: store-app-frontend
spec:
  selector:
    component: store-app-frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
